--- a/style.scss
+++ b/style.scss
@@ -5,7 +5,7 @@ body {
   overflow: hidden;
   --text: rgb(187, 174, 174);
   --enter-width: 60px;
-  --bezier: cubic-bezier(.49,-0.79,.24,1.63);
+  --bezier: cubic-bezier(.31,-0.64,.28,1.38);
   --exit-bezier: cubic-bezier(.41,.04,.24,1.63);
 }
 
@@ -16,10 +16,12 @@ body {
   left: 50%;
   height: var(--width);
   width: var(--width);
-  transform: translate(-50%, -50%) rotate(0deg);
-  transition: transform 1s var(--bezier);
+  padding: 15px;
+  transform: translate(-50%, -50%) rotate(0deg) scale(1);
   border-radius: 50%;
-  
+  opacity: 1;
+  background-color: rgb(43, 27, 27);
+
   span {
     font-size: var(--font-size);
     height: var(--width);
@@ -27,10 +29,32 @@ body {
     text-align: center;
     width: var(--letter-width);
     left: 50%;
-    top: 0;
-    transform-origin: 0% 50%;  
+    top: 50%;
+    transform-origin: 50% 50%;
+    transition: color .4s ease-in-out;
     color: var(--text);
-    transform: rotate(calc((var(--index) - 1) * var(--step)));
+    transform: translate(-50%, -50%) rotate(calc(var(--index) * var(--step)));
+  }
+
+  &:hover {
+    opacity: 1;
+    background-color: rgba(255, 255, 255, .4);
+
+    span {
+      color: rgb(43, 27, 27);
+    }
+  }
+}
+
+body.is-scrolling {
+  .circle-text {
+    transition: opacity .4s var(--exit-bezier), background-color .5s ease-in-out;
+  }
+}
+
+body:not(.is-scrolling) {
+  .circle-text {
+    transition: transform 2s var(--bezier), opacity .4s var(--exit-bezier), background-color .5s ease-in-out;
   }
 }
 
@@ -39,26 +63,26 @@ body {
   --letter-width: 44px;
   --font-size: 45px;
   --step: 9deg;
-  transform: translate(-50%, -50%) rotate(var(--circle-1-start));
+  transform: translate(-50%, -50%) rotate(var(--circle-1-start)) scale(1);
   font-family: 'Russo One', sans-serif;
 }
 
 .style-2 {
-  --width: 449px;
-  --letter-width: 20px;
-  --font-size: 40px;
-  --step: 10deg;
-  transform: translate(-50%, -50%) rotate(var(--circle-2-start));
+  --width: 490px;
+  --letter-width: 44px;
+  --font-size: 70px;
+  --step: 11deg;
+  transform: translate(-50%, -50%) rotate(var(--circle-2-start)) scale(1);
   text-transform: uppercase;
   font-family: 'Pathway Gothic One', sans-serif;
 }
 
 .style-3 {
-  --width: 240px;
+  --width: 270px;
   --letter-width: 20px;
   --font-size: 26px;
   --step: 10deg;
-  transform: translate(-50%, -50%) rotate(var(--circle-3-start));
+  transform: translate(-50%, -50%) rotate(var(--circle-3-start)) scale(1);
   text-transform: uppercase;
   font-family: 'Arapey', serif;
 }
@@ -100,11 +124,56 @@ body {
   opacity: 1;
 }
 
+body.start-transition {
+  .circle-text  {
+    &:nth-child(1) {
+      transition: all 2s var(--exit-bezier) 0s;
+    }
+  
+    &:nth-child(2) {
+      transition: all 1.5s var(--exit-bezier) .5s;
+    }
+  
+    &:nth-child(3) {
+      transition: all 1s var(--exit-bezier) 1s;
+    }  
+  }
+
+  .enter {
+    transition: opacity 1s var(--exit-bezier) 2s;
+  }
+}
+
+body.start {
+  .circle-text {
+    opacity: 0;
+    transform: translate(-50%, -50%) rotate(0deg) scale(.2);
+  } 
+
+  .enter {
+    opacity: 0;
+  }
+}
+
 body.exit {
   .circle-wrapper {
     transform: translate(-50%, -50%) scale(5);
     opacity: 0;
   } 
+
+  .circle-text  {
+    &:nth-child(1) {
+      transition: all 2s var(--exit-bezier) 0s;
+    }
+  
+    &:nth-child(2) {
+      transition: all 1.5s var(--exit-bezier) .5s;
+    }
+  
+    &:nth-child(3) {
+      transition: all 1s var(--exit-bezier) 1s;
+    }  
+  }
 
   .enter {
     pointer-events: none;
